--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@types/lodash": "^4.17.13",
+    "axios": "^1.6.2",
+    "i18next": "^24.0.5",
+    "i18next-browser-languagedetector": "^8.0.1",
+    "i18next-http-backend": "^3.0.1",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.294.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^15.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
