--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,11 +7,11 @@ pool:
     - agent.name -equals LOKMANE
 
 variables:
-  azureSubscription: 'Azureserviceconnection'  # Replace with your Azure service connection name
+  azureSubscription: 'Azureserviceconnection'  # Your Azure service connection name
   frontendImageName: 'azurecontainerregistryconnection.azurecr.io/frontend'
   backendImageName: 'azurecontainerregistryconnection.azurecr.io/backend'
-  frontendAppName: 'frontend-app-service'  # Replace with your Azure App Service name for frontend
-  backendAppName: 'backend-app-service'  # Replace with your Azure App Service name for backend
+  frontendAppName: 'frontend-app-service'  # Your Azure App Service name for frontend
+  backendAppName: 'backend-app-service'  # Your Azure App Service name for backend
 
 steps:
 # Step 1: Checkout the code from the new repository
@@ -23,7 +23,7 @@ steps:
   displayName: Login to Azure Container Registry
   inputs:
     command: login
-    containerRegistry: 'AzureDockerConnection'  # The name of your dockerregistry service connection
+    containerRegistry: 'AzureDockerConnection'  # The name of your docker registry service connection
 
 # Step 3: Build and push the frontend Docker image
 - task: Docker@2
